Modified templates to display posts

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,15 @@
     <title>BloCK</title>
 </head>
 <body>
-    <p>Tweakin'</p>
+    <header>
+        <h1><a href= "/">My BloCK</a></h1>
+    </header>
+    {% for post in posts %}
+      <article>
+         <time>published: {{ post.published_date }}</time>
+         <h2><a href="">{{ post.title }}</a></h2>
+         <p>{{ post.text|linebreaksbr }}</p>
+      </article>
+    {% endfor %}
 </body>
 </html>
