--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,9 +11,10 @@
     </header>
     {% for post in posts %}
       <article>
-         <time>published: {{ post.published_date }}</time>
-         <h2><a href="">{{ post.title }}</a></h2>
-         <p>{{ post.text|linebreaksbr }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <time>published: {{ post.published_date }}</time>
+        <p>author: {{ post.author }}</p> 
+        <p>{{ post.text|linebreaksbr }}</p>
       </article>
     {% endfor %}
 </body>
