--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BloCK</title>
-</head>
-<body>
-    <header>
-        <h1><a href= "/">My BloCK</a></h1>
-    </header>
-    {% for post in posts %}
-      <article>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <time>published: {{ post.published_date }}</time>
-        <p>author: {{ post.author }}</p> 
+{% extends 'blog/base.html' %}
+
+{% block content %}
+  {% for post in posts %}
+    <article class="post">
+        <time class="date">
+           Published: {{ post.published_date }}
+        </time>
+        <p class="author">Author: {{ post.author }}</p>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
-      </article>
-    {% endfor %}
-</body>
-</html>
+    </article>
+    </br><hr>
+  {% endfor %}
+{% endblock %}
+
