--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,9 @@
 <body>
     <header class = "page-header">
         <div class = "container">
+            <a href="{% url 'post_new' %}" class="top-menu">
+                {% include './icons/file-earmark-plus.svg' %}
+            </a>
             <h1><a href= "/">My BloCK</a></h1>
         </div>
     </br>
@@ -19,6 +22,11 @@
     <main class="container">
         <div class="row">
             <div class="col">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu">
+                        {% include './icons/file-earmark-plus.svg' %}
+                    </a>
+                {% endif %}
             {% block content %}
             {% endblock %}
             </div>
