--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,7 +1,13 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>New post</h2>
+    <h2>
+        {% if is_edit %}
+            Edit post
+        {% else %}
+            New post
+        {% endif %}
+    </h2>
     <form method="POST" class="post-form"> {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-secondary">Save</button>
