Fixed typo in the condition for edit/delete button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
     <article class="post">
         <aside class="actions">
-            {% if user.is_authenticated and post.athor == user %}
+            {% if user.is_authenticated and post.author == user %}
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
                    {% include './icons/pencil-fill.svg' %}
                 </a>
