Fixed edit/delete features for authenticated user

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,6 +7,13 @@
                 <a class="btn btn-secondary" href="{% url 'post_delete' pk=post.pk %}">
                     {% include './icons/trash.svg' %}
                 </a>
+            {% elif user.is_superuser and post author == user %}
+                <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+                    {% include './icons/pencil-fill.svg' %}
+                </a>
+                <a class="btn btn-secondary" href="{% url 'post_delete' pk=post.pk %}">
+                    {% include './icons/trash.svg' %}
+                </a>
             {% elif user.is_authenticated and post.author == user %}
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
                    {% include './icons/pencil-fill.svg' %}
