--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,12 +15,13 @@
                         {% include './icons/trash.svg' %}
                     </a>
                 {% else %}    
-                <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
-                   {% include './icons/pencil-fill.svg' %}
-                </a>
-                <a class="btn btn-secondary" href="{% url 'post_delete' pk=post.pk %}">
-                    {% include './icons/trash.svg' %}
-                 </a>
+                    <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+                        {% include './icons/pencil-fill.svg' %}
+                    </a>
+                    <a class="btn btn-secondary" href="{% url 'post_delete' pk=post.pk %}">
+                        {% include './icons/trash.svg' %}
+                    </a>
+                {% endif %}
             {% endif %}
         </aside>
         {% if post.published_date %}    
