Trim leading/trailing whitespace in the user_token and post_token, make sure they are strings

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
     <pre>
         User Authenticated: {{ user.is_authenticated }}
         User Token: {{ user_token }}
-        Post Token: {{ post.token }}
+        Post Token: {{ post_token }}
         Tokens match: {{ tokens_match }}
         Can Edit/Delete: {{ can_edit_delete }}
     </pre>
