Fixed bugs in showing the edited status

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,9 @@
     <article class="post">
         <time class="date">
            Published: {{ post.created_date }}
-           Updated: {{ post.published_date}}
+            {% if post.published_date and post.published_date != post.created_date %}
+                <br>Updated: {{ post.published_date }}
+            {% endif %}
         </time>
         <p class="author">
             Author: 
@@ -15,11 +17,12 @@
                 Anonymous
             {% endif %}
         </p>
-        <h4>
-            {% if post.published_date %}
+    </br>
+        <p>
+            {% if post.published_date and post.published_date != post.created_date %}
                 (Edited)
             {% endif %}
-        </h4>
+        </p>
         <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </article>
