--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>
-        {% if is_edit %}
+        {% if post.is_edited %}
             Edit post
         {% else %}
             New post
