--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <article class="post">
         <time class="date">
            Published: {{ post.created_date }}
-            {% if post.published_date and post.published_date != post.created_date %}
+            {% if post.is_edited %}
                 <br>Updated: {{ post.published_date }}
             {% endif %}
         </time>
@@ -19,7 +19,7 @@
         </p>
     </br>
         <p>
-            {% if post.published_date and post.published_date != post.created_date %}
+            {% if post.is_edited %}
                 (Edited)
             {% endif %}
         </p>
